# tilineshuachicoleros

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
src/optifuel/: cli.py  data.py  metrics.py  optimize.py  report.py
src/optifuel_starter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_import.py  test_smoke.py
